# cpp-professional-bayan

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
